authentik/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-server
  labels:
    app.kubernetes.io/version: v1
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: authentik-server
  template:
    metadata:
      labels:
        app: authentik-server
        app.kubernetes.io/component: server
        app.kubernetes.io/name: authentik
        app.kubernetes.io/version: v1
    spec:
      serviceAccountName: authentik
      containers:
        - name: authentik
          image: ghcr.io/goauthentik/server:2026.5.6
          args:
            - server
          ports:
            - containerPort: 9000
            - containerPort: 9300
          volumeMounts:
            - mountPath: /media
              name: authentik-storage
              subPath: media
            - mountPath: /templates
              name: authentik-storage
              subPath: templates
      volumes:
        - name: authentik-storage
          persistentVolumeClaim:
            claimName: authentik-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-worker
  labels:
    app.kubernetes.io/version: v1
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: authentik-worker
  template:
    metadata:
      labels:
        app: authentik-worker
        app.kubernetes.io/version: v1
    spec:
      serviceAccountName: authentik
      containers:
        - name: authentik
          image: ghcr.io/goauthentik/server:2026.5.6
          args:
            - worker
          volumeMounts:
            - mountPath: /media
              name: authentik-storage
              subPath: media
            - mountPath: /templates
              name: authentik-storage
              subPath: templates
            - mountPath: /certs
              name: authentik-storage
              subPath: certs
      volumes:
        - name: authentik-storage
          persistentVolumeClaim:
            claimName: authentik-pvc
