authentik/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: auth.limtaehyun.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-service
                port:
                  number: 9000
